--- a/package.json
+++ b/package.json
@@ -100,7 +100,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "svg-sprite-loader": "^5.0.0",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1"
   },
   "jest": {
     "roots": [
