--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@types/webpack-env": "1.15.1",
     "svg-sprite-loader": "^5.0.0",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1"
