--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "mathjs": "^8.0.1",
     "mini-css-extract-plugin": "0.11.3",
     "node-sass": "npm:dart-sass",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -103,6 +104,7 @@
   },
   "devDependencies": {
     "@types/classnames": "2.2.6",
+    "@types/mathjs": "^6.0.7",
     "@types/react-router-dom": "^5.1.6",
     "@types/webpack-env": "1.15.1",
     "svg-sprite-loader": "^5.0.0",
