--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "morney",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jenvyxu.github.io/save-my-money/build/",
   "dependencies": {
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
