--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.9.5",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "echarts": "^4.9.0",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
