--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
