feat: 根据分类添加标签

--- a/package.json
+++ b/package.json
@@ -69,11 +69,13 @@
     "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.9.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
