--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/decimal.js": "^7.4.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
@@ -33,6 +34,7 @@
     "classnames": "2.2.6",
     "css-loader": "4.3.0",
     "dayjs": "^1.9.5",
+    "decimal.js": "^10.2.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "echarts": "^4.9.0",
